--- a/index.html
+++ b/index.html
@@ -267,12 +267,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p>Feel free to <a href="mailto:anthonypoluch@gmail.com"><span class="label"><b>email me</b></span></a> and
                 check out my different profiles on the sites shown below</p>
             <ul class="icons">
-                <li><a href="https://linkedin.com/in/anthony-poluch-5b4539120" target="_blank"
-                       class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                <li><a href="https://github.com/TPoluch" target="_blank" class="icon brands fa-github"><span
-                        class="label">GitHub</span></a></li>
-                <li><a href="https://www.kaggle.com/tonypoluch/account" target="_blank"
-                       class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
+                    <li><a href="https://linkedin.com/in/anthony-poluch-5b4539120" target="_blank"
+                           class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://github.com/TPoluch" target="_blank" class="icon brands fa-github"><span
+                            class="label">GitHub</span></a></li>
+                    <li><a href="https://public.tableau.com/app/profile/anthony1170" target="_blank"
+                           class="icon brands fa-chart-bar"><span class="label">Tableau Public</span></a></li>
             </ul>
         </article>
 
