--- a/index.html
+++ b/index.html
@@ -339,12 +339,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                 </ol>
                 <h4>Icons</h4>
                 <ul class="icons">
-                    <li><a href="https://linkedin.com/in/anthony-poluch-5b4539120" target="_blank"
-                           class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="https://github.com/TPoluch" target="_blank" class="icon brands fa-github"><span
-                            class="label">GitHub</span></a></li>
-                    <li><a href="https://www.kaggle.com/tonypoluch/account" target="_blank"
-                           class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
+		    <li><span class="hovertext" data-hover="LinkedIn Profile"><a href="https://linkedin.com/in/anthony-poluch-5b4539120" target="_blank"
+                           class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></span></li>
+                    <li><span class="hovertext" data-hover="Github Profile"><a href="https://github.com/TPoluch" target="_blank" class="icon brands fa-github"><span
+                            class="label">GitHub</span></a></span></li>
+                    <li><span class="hovertext" data-hover="Tableau Public Profile"><a href="https://public.tableau.com/app/profile/anthony1170" target="_blank"
+                           class="icon brands fa-chart-bar"><span class="label">Tableau</span></a></span></li>
                 </ul>
 
                 <h4>Actions</h4>
