--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				more data science focused tools and languages to enhance and expand my current skillset and broaden my 
 				knowledge of the field. For further details about my work experience, 
 				here is my <a href="Resume.pdf" download><span
-                                    class="image.left"><b>resume</b></span></a>.</p></div>
+                                    class="image.left"><b>resume</b></span></a>. Additionally, if you would like a visual representation of my resume,
+                        here is the link to my <a href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"
+                   target="_blank"><span class="image.left"><b>Tableau resume</b></span></a>.</p></div>
                 </section>
             </section>
 
