--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <!-- Wrapper -->
 <div id="wrapper">
+<div id="particles-js"></div>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
 
     <!-- Header -->
     <header id="header">
