--- a/index.html
+++ b/index.html
@@ -66,10 +66,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#work">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <a href="#about" style="border-radius: 25px" ><button class="bubbly-button" >About</button></a>
+                <script src="script.js"></script>
+                <a href="#work" style="border-radius: 25px" ><button class="bubbly-button" >Skills</button></a>
+                <script src="script.js"></script>
+                <a href="#projects" style="border-radius: 25px" ><button class="bubbly-button" >Projects</button></a>
+                <script src="script.js"></script>
+                <a href="#contact" style="border-radius: 25px" ><button class="bubbly-button" >Contact</button></a>
+                <script src="script.js"></script>
                 <!--<li><a href="#elements">Elements</a></li>-->
             </ul>
         </nav>
