--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </article>
 
         <!-- About -->
-        <article id="projects">
+        <article id="projects"  style="width: 75%">
             <h1 class="major">Projects</h1>
             <div class="dropdown">
               <button class="dropbtn">Type ▼</button>
