--- a/index.html
+++ b/index.html
@@ -217,26 +217,38 @@ background: linear-gradient(to bottom right, #465EAF, #250E7A); border-radius: 2
         </article>
 
         <!-- About -->
-        <article id="projects" style="width: 75%">
-            <h1 class="major">Projects</h1>
-            <div class="dropdown">
-                <button class="dropbtn">Type ▼</button>
-                <div class="dropdown-content">
-                    <a href="#python">Python</a>
-                    <a href="#tableau">Tableau</a>
-                    <a href="#alteryx">Alteryx</a>
-                    <a href="#SQL">SQL</a>
-                    <a href="#R">R</a>
-                    <a href="#HTML">HTML</a>
-                    <a href="#google">Google Analytics</a>
-                    <a href="#other">Others</a>
-                </div>
-            </div>
+        <article id="projects" style="width: 90%">
+            <h1>Projects</h1>
+            <i><sup>*click project image to view github repo (project overview/code)</sup></i><br>
             <br>
-            <i><sup><br>*click project image to view github repo (project overview/code)</sup></i>
-            <hr>
-
-            <a id="python"></a><br>
+            <ul class="projects-list">
+                <a href="#python">
+                    <li class="Python"> Python</li>
+                </a>
+                <a href="#tableau">
+                    <li class="Tableau">Tableau</li>
+                </a>
+                <a href="#alteryx">
+                    <li class="Alteryx">Alteryx</li>
+                </a>
+                <a href="#SQL">
+                    <li class="SQL">SQL</li>
+                </a>
+                <a href="#R">
+                    <li class="R-Programming">R Programming</li>
+                </a>
+                <a href="#HTML">
+                    <li class="HTML">HTML</li>
+                </a>
+                <a href="#google">
+                    <li class="Google-Analytics">Google Analytics</li>
+                </a>
+                <a href="#other">
+                    <li class="Others">Others</li>
+                </a>
+            </ul>
+            <a id="python"></a><br><br>
+            <br><br><br>
             <h2 class="main"><i>Python</i></h2><br>
 
             <h3>User-Unique Recommended Songs Playlist</h3>
