--- a/index.html
+++ b/index.html
@@ -86,10 +86,7 @@
     <header id="header">
         <div class="content">
             <div class="inner" style="
-background: #465EAF;
-background: -webkit-linear-gradient(top left, #465EAF, #250E7A);
-background: -moz-linear-gradient(top left, #465EAF, #250E7A);
-background: linear-gradient(to bottom right, #465EAF, #250E7A); border-radius: 25px; border: 3px solid #ff9900">
+background: rgba(22, 34, 54,.8); border-radius: 25px; border: 3px solid #ff9900">
                 <h1 style="color: #ffffff;"><b>Anthony Poluch</b></h1>
                 <p \><b>Senior Business Intelligence Analyst</b></p>
             </div>
