--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ background: rgba(22, 34, 54,.8); border-radius: 25px; border: 3px solid #ff9900"
                     <li class="Others">Others</li>
                 </a>
             </ul>
-            <a id="python"></a><br><br>
+            <a id="python"></a><br><br><br><br><br><br><br><br><br>
             <h2 class="main"><i>Python</i></h2><br>
 
             <h3>User-Unique Recommended Songs Playlist</h3>
