--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@ background: rgba(22, 34, 54,.8); border-radius: 25px; border: 3px solid #ff9900"
                 <a href="#other">
                     <li class="Others">Others</li>
                 </a>
-            </ul>
-            <a id="python"></a><br><br><br><br><br><br><br><br><br>
+            </ul><hr style="width: 100vh; padding: 1rem; border-color: transparent">
+            <a id="python"></a><br>
             <h2 class="main"><i>Python</i></h2><br>
 
             <h3>User-Unique Recommended Songs Playlist</h3>
