update about page

--- a/index.html
+++ b/index.html
@@ -142,12 +142,8 @@ background: rgba(22, 34, 54,.8); border-radius: 25px; border: 3px solid #ff9900"
                         <p>Hello and welcome to my website! My name is Tony and I'm an experienced analytics
                             professional with a passion for data and technology.
                             I pride myself on my work ethic, resourcefulness, and my ability to learn quickly.
-                            In my current role I focus on effectively sourcing, processing, and visualizing data in
-                            order
-                            to provide insight and actionable intelligence. In my free time I am working on learning
-                            more data science focused tools and languages to enhance and expand my current skillset and
-                            broaden my
-                            knowledge of the field. For further details about my work experience,
+                            In my current role, my work involves designing and coding the data architecture and necessary logic to amalgamate multiple databases, tables, and the like into cohesive datasets. These processes culminate in the generation of insightful, actionable intelligence via well-structured dashboards, which help drive strategic business decisions. In my free time, I am working on learning
+                            more data science-focused tools and methodologies to enhance and expand my current skill set. For further details about my work experience,
                             here is my <a href="Resume.pdf" download><span
                                     class="image.left"><b>resume</b></span></a>. Additionally, if you would like a
                             visual representation of my resume,
