--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@ background: rgba(22, 34, 54,.8); border-radius: 25px; border: 3px solid #ff9900"
                     <div>
                         <span><img src="linkedin.png" width=50% height=50% align="left"
                                    style="padding-right:10px; padding-bottom: 5px;"/></span>
-                        <p>Hello and welcome to my website! I'm Tony, an analytics professional with a passion for data and technology. I specialize in designing and developing data pipelines and creating insightful dashboards to drive strategic business decisions.<br>My toolkit includes software like Tableau, Alteryx, PyCharm, and Power BI, and languages such as Python, R, SQL, and HTML. I'm proud to be a certified Tableau Desktop Associate and Alteryx Core Designer.
+                        <p>Hello and welcome to my website! I'm Tony, an analytics professional with a passion for data and technology. I specialize in designing and developing data pipelines and creating insightful dashboards to drive strategic business decisions. My toolkit includes software like Tableau, Alteryx, PyCharm, and Power BI, and languages such as Python, R, SQL, and HTML. I'm proud to be a certified Tableau Desktop Associate and Alteryx Core Designer.
 
-<br>In my free time, I'm committed to expanding my skills in data science and have worked on a variety of projects involving Python, Tableau, Alteryx, SQL, and more. For further details about my work experience,
+In my free time, I'm committed to expanding my skills in data science and have worked on a variety of projects involving Python, Tableau, Alteryx, SQL, and more. For further details about my work experience,
                             here is my <a href="Resume.pdf" download><span
                                     class="image.left"><b>resume</b></span></a>. Additionally, if you would like a
                             visual representation of my resume,
