--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
                 <section>
                     <div><h3>Certifications</h3></div>
                     <ul>
-			    <li>AWS Certified Cloud Practitioner<li>
+			<li>AWS Certified Cloud Practitioner</li>
                         <li>Tableau Qualified Desktop Associate</li>
                         <li>Alteryx Core Designer</li>
                         <li>Lean Six Sigma Yellow Belt</li>
