--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
     <!-- Header -->
     <header id="header">
         <div class="content">
-            <div class="inner" style="
-">
+            <div class="inner" style="">
                 <h1 style="color: #ffffff;"><b>Anthony Poluch</b></h1>
                 <p \><b>Senior Business Intelligence Analyst</b></p>
             </div>
