--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="content">
             <div class="inner" style="">
                 <h1 style="color: #ffffff;"><b>Anthony Poluch</b></h1>
-                <p \><b>Senior Business Intelligence Analyst</b></p>
+                <p \><b>BI Analyst @ AWS | Data Analytics, Data Science</b></p>
             </div>
         </div>
         <nav>
