--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <!-- About -->
         <article id="about">
-            <h1 class="major">About</h1>
+            <h1 class="major"  style="color: #b49d77;">>About</h1>
             <style>
                 .indent-3 {
                     float: right;
@@ -156,62 +156,25 @@ In my free time, I'm committed to expanding my skills in data science and have w
 
         <!-- Work -->
         <article id="work">
-            <h1 class="major">Skills</h1>
-            <style>
-                .indent-1 {
-                    float: left;
-                }
+            <h1 class="major" style="color: #b49d77;">Skills </h1>
 
-                .indent-1 section {
-                    width: 50%;
-                    float: left;
-                }
+            <div><h3>Languages</h3></div>
+            <p>Python, R, SQL, VBA, HTML</p>
 
-            </style>
+            <div><h3>Software</h3></div>
+            <p>Tableau, Alteryx, Microsoft Power MI, Tableau Prep, DataGrip, Figma, Excel, Oracle Analytics Cloud
+                (OACs), Oracle Transactional Business Intelligence (OTBI), Google Analytics, Google Tag Manager</p>
 
-            <section class="indent-1">
-                <section>
-                    <div><h3>Software</h3></div>
-                    <ul>
-                        <li>Tableau</li>
-                        <li>Alteryx</li>
-                        <li>PyCharm</li>
-                        <li>RStudio</li>
-                        <li>DataGrip</li>
-                        <li>Power BI</li>
-                        <li>Excel</li>
-                        <li>Oracle Analytics Cloud (OACs)</li>
-                        <li>Oracle Transactional Business Intelligence (OTBI)</li>
-                        <li>Google Analytics</li>
-                        <li>Google Tag Manager</li>
-                    </ul>
-                </section>
-                <section>
-                    <div><h3>Languages</h3></div>
-                    <ul>
-                        <li>Python</li>
-                        <li>R</li>
-                        <li>SQL</li>
-                        <li>VBA</li>
-                        <li>HTML</li>
-                        <br>
-                    </ul>
-                </section>
-                <section>
-                    <div><h3>Certifications</h3></div>
-                    <ul>
-			<li>AWS Certified Cloud Practitioner</li>
-                        <li>Tableau Qualified Desktop Associate</li>
-                        <li>Alteryx Core Designer</li>
-                        <li>Lean Six Sigma Yellow Belt</li>
-                    </ul>
-                </section>
-            </section>
+            <div><h3>Data Analytics/<br>Engineering Principles</h3></div>
+            <p>UX Design, Data Modeling, API Integration, ETL Processing, Databases, Data Preparation, Data Visualization</p>
+
+            <div><h3>Certifications</h3></div>
+            <p>AWS Certified Cloud Practitioner, Tableau Qualified Desktop Associate, Alteryx Core Designer, Lean Six Sigma Yellow Belt</p>
         </article>
 
         <!-- About -->
         <article id="projects" style="width: 90%">
-            <h1>Projects</h1>
+            <h1  style="color: #b49d77;">>Projects</h1>
             <i><sup>*click project image to view github repo (project overview/code)</sup></i><br>
             <br>
             <ul class="projects-list">
@@ -357,7 +320,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
 
         <!-- Contact -->
         <article id="contact">
-            <h1 class="major">Contact</h1>
+            <h1 class="major"  style="color: #b49d77;">>Contact</h1>
             <p>Feel free to <a href="mailto:anthonypoluch@gmail.com"><span class="label"><b>email me</b></span></a> and
                 check out my different profiles on the sites shown below</p>
             <ul class="icons">
