--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <!-- About -->
         <article id="about">
-            <h1 class="major"  style="color: #b49d77;">>About</h1>
+            <h1 class="major"  style="color: #b49d77;">About</h1>
             <style>
                 .indent-3 {
                     float: right;
@@ -174,7 +174,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
 
         <!-- About -->
         <article id="projects" style="width: 90%">
-            <h1  style="color: #b49d77;">>Projects</h1>
+            <h1  style="color: #b49d77;">Projects</h1>
             <i><sup>*click project image to view github repo (project overview/code)</sup></i><br>
             <br>
             <ul class="projects-list">
@@ -320,7 +320,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
 
         <!-- Contact -->
         <article id="contact">
-            <h1 class="major"  style="color: #b49d77;">>Contact</h1>
+            <h1 class="major"  style="color: #b49d77;">Contact</h1>
             <p>Feel free to <a href="mailto:anthonypoluch@gmail.com"><span class="label"><b>email me</b></span></a> and
                 check out my different profiles on the sites shown below</p>
             <ul class="icons">
