--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
             <p>Python, R, SQL, VBA, HTML</p>
 
             <div><h3>Software</h3></div>
-            <p>Tableau, Alteryx, Microsoft Power MI, Tableau Prep, DataGrip, Figma, Excel, Oracle Analytics Cloud
+            <p>Tableau, Alteryx, Microsoft Power BI, Tableau Prep, DataGrip, Figma, Excel, Oracle Analytics Cloud
                 (OACs), Oracle Transactional Business Intelligence (OTBI), Google Analytics, Google Tag Manager</p>
 
             <div><h3>Data Analytics/<br>Engineering Principles</h3></div>
