--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
             <h1 class="major" style="color: #b49d77;">Skills </h1>
 
             <div><h3>Languages</h3></div>
-            <p>Python, R, SQL, VBA, HTML</p>
+            <p>SQL, Python, R, VBA, HTML, CSS</p>
 
             <div><h3>Software</h3></div>
             <p>Tableau, Alteryx, Microsoft Power BI, Tableau Prep, DataGrip, Figma, Excel, Oracle Analytics Cloud
