--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 
 In my free time, I'm committed to expanding my skills in data science and have worked on a variety of projects involving Python, Tableau, Alteryx, SQL, and more. For further details about my work experience,
                             here is my <a href="Resume.pdf" download><span
-                                    class="image.left"><b>resume</b></span></a>. Additionally, if you would like a
+                                    class="image.left"><b><u>resume</u></b></span></a>. Additionally, if you would like a
                             visual representation of my resume,
                             here is the link to my <a
                                     href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"
-                                    target="_blank"><span class="image.left"><b>Tableau resume</b></span></a>.</p></div>
+                                    target="_blank"><span class="image.left"><b><u>Tableau resume</u></b></span></a>.</p></div>
                 </section>
             </section>
 
@@ -321,7 +321,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
         <!-- Contact -->
         <article id="contact">
             <h1 class="major"  style="color: #b49d77;">Contact</h1>
-            <p>Feel free to <a href="mailto:anthonypoluch@gmail.com"><span class="label"><b>email me</b></span></a> and
+            <p>Feel free to <a href="mailto:anthonypoluch@gmail.com"><span class="label"><b><u>email me</u></b></span></a> or
                 check out my different profiles on the sites shown below</p>
             <ul class="icons">
                 <li><span class="hovertext" data-hover="LinkedIn Profile"><a
