--- a/index.html
+++ b/index.html
@@ -78,18 +78,20 @@
             <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)"/>
             <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff"/>
         </g>
-    </svg>-->
+<!--
+    </svg>&ndash;&gt;
     <div id="particles-js"></div>
         <script src="particles.js"></script>
         <script src="app.js"></script>
+-->
 
 
     <!-- Header -->
     <header id="header">
         <div class="content">
             <div class="inner" style="">
-                <h1 style="color: #ffffff;"><b>Anthony Poluch</b></h1>
-                <p \><b>Senior Business Intelligence Analyst</b></p>
+                <h1 style="color: #ffffff;  "><b>Anthony Poluch</b></h1>
+                <p \ style="color: #ffffff;  "><b>Business Intelligence | Data Science</b></p>
             </div>
         </div>
         <nav>
@@ -120,7 +122,7 @@
 
         <!-- About -->
         <article id="about">
-            <h1 class="major"  style="color: #b49d77;">About</h1>
+            <h1 class="major"  style="color: #0B2046;">About</h1>
             <style>
                 .indent-3 {
                     float: right;
@@ -156,7 +158,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
 
         <!-- Work -->
         <article id="work">
-            <h1 class="major" style="color: #b49d77;">Skills </h1>
+            <h1 class="major" style="color: #0B2046; ">Skills </h1>
 
             <div><h3>Languages</h3></div>
             <p>SQL, Python, R, VBA, HTML, CSS</p>
@@ -173,8 +175,8 @@ In my free time, I'm committed to expanding my skills in data science and have w
         </article>
 
         <!-- About -->
-        <article id="projects" style="width: 90%">
-            <h1  style="color: #b49d77;">Projects</h1>
+        <article id="projects" style="width: 70%; ">
+            <h1  style="color: #0B2046;">Projects</h1>
             <i><sup>*click project image to view github repo (project overview/code)</sup></i><br>
             <br>
             <ul class="projects-list">
@@ -320,7 +322,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
 
         <!-- Contact -->
         <article id="contact">
-            <h1 class="major"  style="color: #b49d77;">Contact</h1>
+            <h1 class="major"  style="color: #0B2046;">Contact</h1>
             <p>Feel free to <a href="mailto:anthonypoluch@gmail.com"><span class="label"><b><u>email me</u></b></span></a> or
                 check out my different profiles on the sites shown below</p>
             <ul class="icons">
