--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@ In my free time, I'm committed to expanding my skills in data science and have w
             <h1  style="color: #0B2046;">Projects</h1>
             <i><sup>*click project image to view github repo (project overview/code)</sup></i><br>
             <br>
-            <ul class="projects-list">
+
+<!--            <ul class="projects-list">
                 <a href="#python">
                     <li class="Python"> Python</li>
                 </a>
@@ -204,7 +205,9 @@ In my free time, I'm committed to expanding my skills in data science and have w
                 <a href="#other">
                     <li class="Others">Others</li>
                 </a>
-            </ul><hr style="width: 100vh; padding: 1rem; border-color: transparent">
+            </ul>-->
+
+<hr style="width: 100vh; padding: 1rem; border-color: transparent">
             <a id="python"></a><br>
             <h2 class="main"><i>Python</i></h2><br>
 
