--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <meta name="title" property="og:title" content="Anthony Poluch"/>
     <meta property="og:type" content="Website"/>
     <meta
-            name="image"
+                        name="image"
             property="og:image"
-            content="https://live.staticflickr.com/65535/53268697035_3702470de6_k.jpg"
+            content="https://live.staticflickr.com/65535/53268697035_74ab3ab8df_k.jpg"
     />
-	
+
     <meta
             name="description"
             property="og:description"
@@ -85,13 +85,12 @@
         <script src="app.js"></script>
 -->
 
-
     <!-- Header -->
     <header id="header">
         <div class="content">
-            <div class="inner" style="">
+            <div class="inner" style="background-filter: blur(20rem);background:  rgba(23, 23, 23, 0);">
                 <h1 style="color: #ffffff;  "><b>Anthony Poluch</b></h1>
-                <p \ style="color: #ffffff;  "><b>Business Intelligence | Data Science</b></p>
+                <p \ style="color: #fffffff;  "><b>Business Intelligence | Data Science</b></p>
             </div>
         </div>
         <nav>
@@ -122,7 +121,7 @@
 
         <!-- About -->
         <article id="about">
-            <h1 class="major"  style="color: #0B2046;">About</h1>
+            <h1 class="major"  style="color: #ffffff; text-decoration: ">About</h1>
             <style>
                 .indent-3 {
                     float: right;
@@ -158,7 +157,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
 
         <!-- Work -->
         <article id="work">
-            <h1 class="major" style="color: #0B2046; ">Skills </h1>
+            <h1 class="major" style="color: #ffffff; ">Skills </h1>
 
             <div><h3>Languages</h3></div>
             <p>SQL, Python, R, VBA, HTML, CSS</p>
@@ -175,13 +174,11 @@ In my free time, I'm committed to expanding my skills in data science and have w
         </article>
 
         <!-- About -->
-        <article id="projects" style="width: 90%; ">
-            <h1  style="color: #0B2046;">Projects</h1>
+        <article id="projects" style="width: 70%; ">
+            <h1  style="color: #ffffff;">Projects</h1>
             <i><sup>*click project image to view github repo (project overview/code)</sup></i><br>
 
-
-<!--                    <br>
-		<ul class="projects-list">
+       <!--     <ul class="projects-list">
                 <a href="#python">
                     <li class="Python"> Python</li>
                 </a>
@@ -206,9 +203,8 @@ In my free time, I'm committed to expanding my skills in data science and have w
                 <a href="#other">
                     <li class="Others">Others</li>
                 </a>
-		<hr style="width: 100vh; padding: 1rem; border-color: transparent">
+                            <hr style="width: 100vh; padding: 1rem; border-color: transparent">
             </ul>-->
-
 
             <a id="python"></a><br>
             <h2 class="main"><i>Python</i></h2><br>
@@ -327,7 +323,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
 
         <!-- Contact -->
         <article id="contact">
-            <h1 class="major"  style="color: #0B2046;">Contact</h1>
+            <h1 class="major"  style="color: #ffffff;">Contact</h1>
             <p>Feel free to <a href="mailto:anthonypoluch@gmail.com"><span class="label"><b><u>email me</u></b></span></a> or
                 check out my different profiles on the sites shown below</p>
             <ul class="icons">
