--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
         </article>
 
         <!-- About -->
-        <article id="projects" style="width: 70%; ">
+        <article id="projects" style="">
             <h1  style="color: #ffffff;">Projects</h1>
             <i><sup>*click project image to view github repo (project overview/code)</sup></i><br>
 
