--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
     <!-- Header -->
     <header id="header">
         <div class="content">
-            <div class="inner" style="background-filter: blur(20rem);background:  rgba(23, 23, 23, 0);">
-                <h1 style="color: #ffffff;  "><b>Anthony Poluch</b></h1>
+            <div class="inner" style=" ">
+                <h1 style="color: #ffffff;
+    "><b>Anthony Poluch</b></h1>
                 <p \ style="color: #fffffff;  "><b>Business Intelligence | Data Science</b></p>
             </div>
         </div>
@@ -174,7 +175,7 @@ In my free time, I'm committed to expanding my skills in data science and have w
         </article>
 
         <!-- About -->
-        <article id="projects" style="">
+        <article id="projects" style="width: 70%; ">
             <h1  style="color: #ffffff;">Projects</h1>
             <i><sup>*click project image to view github repo (project overview/code)</sup></i><br>
 
