--- a/index.html
+++ b/index.html
@@ -141,9 +141,7 @@
                     <div>
                         <span><img src="linkedin.png" width=50% height=50% align="left"
                                    style="padding-right:10px; padding-bottom: 5px;"/></span>
-                        <p>Hello and welcome to my website! I'm Tony, an analytics professional with a passion for data and technology. I specialize in designing and developing data pipelines and creating insightful dashboards to drive strategic business decisions. My toolkit includes software like Tableau, Alteryx, PyCharm, and Power BI, and languages such as Python, R, SQL, and HTML. I'm proud to be a certified Tableau Desktop Associate and Alteryx Core Designer.
-
-In my free time, I'm committed to expanding my skills in data science and have worked on a variety of projects involving Python, Tableau, Alteryx, SQL, and more. For further details about my work experience,
+                        <p>Hello and welcome to my website! I'm Tony, an analytics professional with a passion for data and technology. I’m an analytics leader with a passion for turning data into meaningful business outcomes. I specialize in delivering end-to-end analytics solutions—from sourcing and transforming data to building intuitive dashboards that support strategic decisions. I enjoy bridging the gap between business goals and technical execution by designing tools that align directly with organizational objectives. My work is all about making data approachable, actionable, and impactful. For further details about my work experience,
                             here is my <a href="Resume.pdf" download><span
                                     class="image.left"><b><u>resume</u></b></span></a>. Additionally, if you would like a
                             visual representation of my resume,
