--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div>
                         <span><img src="linkedin.png" width=50% height=50% align="left"
                                    style="padding-right:10px; padding-bottom: 5px;"/></span>
-                        <p>Hello and welcome to my website! I'm Tony, an analytics professional with a passion for data and technology. I’m an analytics leader with a passion for turning data into meaningful business outcomes. I specialize in delivering end-to-end analytics solutions—from sourcing and transforming data to building intuitive dashboards that support strategic decisions. I enjoy bridging the gap between business goals and technical execution by designing tools that align directly with organizational objectives. My work is all about making data approachable, actionable, and impactful. For further details about my work experience,
+                        <p>Hello and welcome to my website! I'm Tony, an analytics leader with a passion for turning data into meaningful business outcomes. I specialize in delivering end-to-end analytics solutions—from sourcing and transforming data to building intuitive dashboards that support strategic decisions. I enjoy bridging the gap between business goals and technical execution by designing tools that align directly with organizational objectives. My work is all about making data approachable, actionable, and impactful. For further details about my work experience,
                             here is my <a href="Resume.pdf" download><span
                                     class="image.left"><b><u>resume</u></b></span></a>. Additionally, if you would like a
                             visual representation of my resume,
